2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Push the stacktrace too

2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added some proper handling for metadata parsing errors

2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added the FileSystem to the constructor and implemented the
	  'Size' property.
	* src/FileSystem.cs: Some path fixes for BaseDirectory usage. Removed
	  needless null check in DeleteFile(string, string)
	* src/Files/GenericFile.cs, src/Files/MusicFile.cs,
	  src/Files/PlaylistFile.cs, src/Files/ImageFile.cs: Added the FileSystem
	  to the constructor
	* src/Base/CameraFilesystem.cs: Fixed the p/invoke declaration.

2007-10-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Since i'm getting the 'metadata' in every case, pull it up to
	  the top. Did some fixing up for the handling of the basedirectory
	* src/FileSystem.cs, src/Files/PlaylistFile.cs: Did some fixing up for the
	  handling of the basedirectory
	* src/Camera.cs: Added a 'reconnect' method.

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/MusicFile.cs: Overrode equals and gethashcode

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/PlaylistFile.cs: Added some brackets to fix bug.

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Loading metadata on all filetypes now as opposed to selective
	  metadata/normal
	* src/FileSystem.cs: Added check for null aswel.
	* src/Files/PlaylistFile.cs: Playlist is loading metadata and contents fully
	  now.

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/PlaylistFile.cs: Fixed bug

2007-10-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Added a helper method to split paths
	* src/Files/PlaylistFile.cs: Playlists are now being populated with a list
	  of the files in them
